Improve accessability and responsive layout. Add aria attributes and accessible name to menu-burger. Adjust hero layout to fix image alignment and lower breakpoint for mobile view. Include WCAG divider improvement to replace image-based divider.

--- a/css/contact.css
+++ b/css/contact.css
@@ -21,7 +21,7 @@
     padding: 1.25rem;
     border-radius: 12px;
     background-color: var(--color-bg);
-    height: 7rem;
+    min-height: 7rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -115,6 +115,16 @@
     color: var(--color-text-body);
     transform: translateY(1px);
 }
+
+.error {
+    color: red;
+}
+
+.error-message {
+    display: none;
+    color: red;
+}
+
 
 @media (max-width: 74rem) {
     .contact-info {
