--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -238,7 +238,7 @@
 
 
 
-@media (max-width: 74rem) {
+@media (max-width: 67rem) {
 
     .sidebar-weather,
     .sidebar-skill-wrapper {
